--- a/HtmlMain.html
+++ b/HtmlMain.html
@@ -12,26 +12,27 @@
         </div>
         <div class="nuber_task_main">
             <div class="number_task">
-                <span><a href="HtmlTask1.html" class="task_linc">Задание 1</a></span>
+                <a href="HtmlTask1.html" class="task_linc">Задание 1</a>
               </div>
           <div class="number_task">
-                   <span><a href="HtmlTask2.html" class="task_linc">Задание 2</a></span>
+                   <a href="HtmlTask2.html" class="task_linc">Задание 2</a>
              </div>
          <div class="number_task">
-                    <span><a href="HtmlTask3.html" class="task_linc">Задание 3</a></span>
+                    <a href="HtmlTask3.html" class="task_linc">Задание 3</a>
              </div>
            <div class="number_task">
-                    <span><a href="HtmlTask4.html" class="task_linc">Задание 4</a></span>
+                    <a href="HtmlTask4.html" class="task_linc">Задание 4</a>
              </div>
           <div class="number_task">
-                   <span><a href="HtmlTask5.html" class="task_linc" >Задание 5</a></span>
+                  <a href="HtmlTask5.html" class="task_linc" >Задание 5</a>
               </div>
           <div class="number_task">
-                  <span><a href="HtmlTask6.html" class="task_linc">Задание 6</a></span>
+                  <a href="HtmlTask6.html" class="task_linc">Задание 6</a>
               </div>
          <div class="number_task">
-               <span><a href="HtmlTask7.html" class="task_linc">Задание 7</a></span>
+               <a href="HtmlTask7.html" class="task_linc">Задание 7</a>
              </div>
     </div>
+</div>
 </body>
 </html>
