--- a/HtmlMain.html
+++ b/HtmlMain.html
@@ -8,7 +8,7 @@
 <body>
     <div class="main_div">
         <div class="select_task">
-            <span>ВЫБЕРЕТЕ ЗАДАНИЕ:</span>
+            <span>ВЫБЕРИТЕ ЗАДАНИЕ:</span>
         </div>
         <div class="nuber_task_main">
             <div class="number_task">
